# misc-crap

./: .gitignore  bloomchart.html  chart.html  dump_cert.py  vimrc  wifi_connect.sh
c/: Makefile  meltdown.c  rawlisten.c  ring_wrapped.c
clang/: ast.sh  calltree_from_ast.py  test.c
elf/: Makefile  README  elftest  elftest.c
go/src/: ecbdecrypt.go  pemcert.go  tcpproxy.go  utf8to16.go
go/src/hipgif/: main.go  server.go  testtile.go
go/src/jsonproxy/: main.go
go/src/l2overlay/: Makefile
go/src/ssldaemon/: .gitignore  Makefile
go/src/util/: util.go
midi/: connect.sh
python/: channelhop.py
python/entangled/: Makefile  combat.py  level.py  main.py  requirements.txt
python/pygame_test/: main.py
python/sonification/: notes.py  sonic.py
rust/cryptopals/: Cargo.toml
rust/guessing_game/: Cargo.toml
rust/hexgrid/: Cargo.toml  Makefile  package-lock.json  tsconfig.json
rust/hexgrid/src/: lib.rs
rust/hexgrid/src/game/: event.rs  mod.rs  turn.rs
rust/hexgrid/src/game/battle/: mod.rs  turn.rs  unit.rs
rust/hexgrid/src/game/battle/event/: mod.rs
rust/hexgrid/src/game/battle/input/: mod.rs
rust/hexgrid/src/hex/: coord.rs  grid.rs
rust/hexgrid/src/misc/: mod.rs
rust/hexgrid/www/: hexgrid-utils.ts  index.html  index.js  mouse-canvas-picker.ts  package-lock.json  package.json
rust/json_server/: Cargo.toml
rust/parse_test/: Cargo.toml
rust/wasm-game-of-life/: Cargo.toml  Makefile
ssl_agent/: Makefile  README  ssl_agent.c  ssl_agent.h
wrap_inotify/: .gitignore  Makefile  file_watcher.h  file_watcher_inotify.c  file_watcher_test.c
(+95 files in other folders)
