[package]
name = "hexgrid"
version = "0.1.0"
authors = ["charredlot <charredlot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.2"
